--- a/src/Components/Profile/ProfileInfo/profile.module.css
+++ b/src/Components/Profile/ProfileInfo/profile.module.css
@@ -1,4 +1,4 @@
-/* .avatar {
+.avatar {
     border-radius: 6rem;
     width: 5rem;
     box-sizing: border-box;
@@ -11,4 +11,4 @@
     color: white;
     margin-left: 43rem;
     box-sizing: border-box;
-} */
+}
